--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/prpatel1231/Profile-Generator#readme",
   "dependencies": {
     "axios": "^0.19.2",
+    "electron": "^8.1.1",
     "electron-html-to": "^2.6.0",
     "inquirer": "^7.1.0"
   }
